--- a/src/videojs.ass_sabre.css
+++ b/src/videojs.ass_sabre.css
@@ -1,9 +1,13 @@
-.vjs-ass {
+.vjs-ass-sabre {
   position: absolute;
   top: 0;
 
   width: 100%;
   height: 100%;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
   pointer-events: none;
 }
